<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mx.randalf.digital</groupId>
	<artifactId>RandalfDigital</artifactId>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.9</maven.compiler.source>
		<maven.compiler.target>1.9</maven.compiler.target>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.im4java</groupId>
			<artifactId>im4java</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.tess4j</groupId>
			<artifactId>tess4j</artifactId>
			<version>4.5.1</version>
			<exclusions>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- 
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		 -->
		<!-- <dependency> <groupId>com.sun.media.imageio</groupId> <artifactId>jai_imageio</artifactId> 
			<version>1.1</version> </dependency> -->
			<!-- 
		<dependency>
			<groupId>com.sun.jna</groupId>
			<artifactId>jna</artifactId>
			<version>3.0.9</version>
		</dependency>
			 -->
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>net.htmlparser</groupId>
			<artifactId>jericho-html</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
	</dependencies>
	<!-- <distributionManagement> <repository> <uniqueVersion>false</uniqueVersion> 
		<id>sftp-repository-stable</id> <url>scpexe://maven.bncf.lan/var/www/maven.bncf.lan/repository/release</url> 
		<layout>default</layout> </repository> </distributionManagement> <repositories> 
		<repository> <snapshots> <enabled>false</enabled> </snapshots> <id>randalf.mx-release</id> 
		<url>http://maven.bncf.lan/repository/release</url> </repository> </repositories> 
		<build> <extensions> <extension> <groupId>org.apache.maven.wagon</groupId> 
		<artifactId>wagon-ssh-external</artifactId> <version>1.0-beta-6</version> 
		</extension> </extensions> </build> -->
	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/java</directory>
				<excludes>
					<exclude>**/log4j.xml</exclude>
					<exclude>**/log4j.dtd</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
	<distributionManagement>
		<repository>
			<id>mvn-bncf</id>
			<name>Maven BNCF-releases</name>
			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
		</repository>
	</distributionManagement>
	<version>3.0.1</version>
</project>
